--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,23 +1,33 @@
-name: deploy-backend
+name: deploy-vps
+
 on:
   push:
     branches: ["main"]
-  workflow_dispatch: {}
+  workflow_dispatch:
+    inputs:
+      ref:
+        description: "Branch, tag ou SHA para deploy (opcional)"
+        required: false
+        default: "main"
 
 permissions:
   contents: read
-  id-token: write
+
+concurrency:
+  group: deploy-vps
+  cancel-in-progress: false
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     steps:
-      - name: Checkout (apenas para ler o SHA)
+      - name: Checkout (metadados do repositório)
         uses: actions/checkout@v4
         with:
-          fetch-depth: 2
+          fetch-depth: 0
 
-      - name: Validar variáveis do deploy
+      - name: Validar variáveis obrigatórias
         env:
           SSH_HOST: ${{ secrets.VPS_HOST || vars.VPS_HOST }}
           SSH_USER: ${{ secrets.VPS_USER || vars.VPS_USER }}
@@ -28,32 +38,84 @@ jobs:
           [ -z "$SSH_HOST" ] && missing+=("VPS_HOST")
           [ -z "$SSH_USER" ] && missing+=("VPS_USER")
           [ -z "$SSH_KEY" ] && missing+=("VPS_SSH_KEY")
+          [ -z "$SSH_PORT" ] && missing+=("VPS_PORT")
           if [ "${#missing[@]}" -gt 0 ]; then
-            echo "::error::Secrets/Variables ausentes: ${missing[*]} (Configurar em Settings > Secrets and variables > Actions)."
+            echo "::error::Secrets/Variables ausentes: ${missing[*]}."
+            echo "::error::Configure em Settings > Secrets and variables > Actions."
             exit 1
           fi
 
-      - name: Deploy via SSH
+      - name: Deploy + build dentro da VPS
         uses: appleboy/ssh-action@v1.2.0
+        env:
+          TARGET_REF: ${{ github.event.inputs.ref || github.sha }}
+          APP_DIR: ${{ secrets.VPS_APP_DIR || vars.VPS_APP_DIR }}
+          PM2_APP: ${{ secrets.VPS_PM2_APP || vars.VPS_PM2_APP }}
+          PM2_FALLBACK_APP: ${{ secrets.VPS_PM2_FALLBACK_APP || vars.VPS_PM2_FALLBACK_APP || 'lopesul-dashboard' }}
+          HEALTHCHECK_URL: ${{ secrets.VPS_HEALTHCHECK_URL || vars.VPS_HEALTHCHECK_URL }}
         with:
           host: ${{ secrets.VPS_HOST || vars.VPS_HOST }}
           username: ${{ secrets.VPS_USER || vars.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY || vars.VPS_SSH_KEY }}
           port: ${{ secrets.VPS_PORT || vars.VPS_PORT || 22 }}
           script_stop: true
+          command_timeout: 25m
+          envs: TARGET_REF,APP_DIR,PM2_APP,PM2_FALLBACK_APP,HEALTHCHECK_URL
           script: |
-            set -e
-            cd /opt/lopesul-dashboard
-            # garante repo válido
-            git remote -v || { echo "Repositório não existe em /opt/lopesul-dashboard"; exit 1; }
-            git fetch --all --prune
-            git reset --hard $GITHUB_SHA || git reset --hard origin/main
+            set -Eeuo pipefail
 
-            # instala só prod e builda
-            npm ci --omit=dev
+            if [ -n "${APP_DIR:-}" ]; then
+              DEPLOY_DIR="$APP_DIR"
+            elif [ -d "/opt/lopesul-dashboard" ]; then
+              DEPLOY_DIR="/opt/lopesul-dashboard"
+            elif [ -d "/opt/painel-new" ]; then
+              DEPLOY_DIR="/opt/painel-new"
+            else
+              echo "ERRO: não foi possível localizar o diretório do app."
+              echo "Defina VPS_APP_DIR em Secrets/Variables."
+              exit 1
+            fi
+
+            echo "Deploy dir: ${DEPLOY_DIR}"
+            cd "${DEPLOY_DIR}"
+
+            [ -d ".git" ] || { echo "ERRO: ${DEPLOY_DIR} não é um repositório git."; exit 1; }
+
+            git fetch --all --prune
+            git reset --hard "${TARGET_REF}" || git reset --hard origin/main
+
+            npm ci --no-audit --fund=false
+            npm run db:deploy
             npm run build
 
-            # reinicia PM2 com envs carregadas do ambiente
-            pm2 restart "${PM2_APP:-lopesul-dashboard}" --update-env
+            if [ -n "${PM2_APP:-}" ] && pm2 describe "${PM2_APP}" >/dev/null 2>&1; then
+              APP_NAME="${PM2_APP}"
+            elif pm2 describe "lopesul-painel" >/dev/null 2>&1; then
+              APP_NAME="lopesul-painel"
+            elif pm2 describe "${PM2_FALLBACK_APP}" >/dev/null 2>&1; then
+              APP_NAME="${PM2_FALLBACK_APP}"
+            else
+              APP_NAME="${PM2_APP:-lopesul-painel}"
+              pm2 start npm --name "${APP_NAME}" -- start
+            fi
+
+            pm2 restart "${APP_NAME}" --update-env
             pm2 save
             pm2 ls
+
+            if [ -n "${HEALTHCHECK_URL:-}" ]; then
+              echo "Healthcheck: ${HEALTHCHECK_URL}"
+              for i in 1 2 3 4 5; do
+                if curl -fsS --max-time 10 "${HEALTHCHECK_URL}" >/dev/null; then
+                  echo "Healthcheck OK"
+                  break
+                fi
+                if [ "${i}" -eq 5 ]; then
+                  echo "ERRO: healthcheck falhou após ${i} tentativas."
+                  exit 1
+                fi
+                sleep 5
+              done
+            else
+              echo "HEALTHCHECK_URL não configurada. Pulando validação HTTP."
+            fi
