--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -13,13 +13,7 @@ jobs:
     name: Analyze code with CodeQL
     runs-on: ubuntu-latest
     permissions:
-      actions: read
       contents: read
-
-    strategy:
-      fail-fast: false
-      matrix:
-        language: [ 'javascript', 'typescript' ]
 
     steps:
       - name: Checkout repository
@@ -28,7 +22,7 @@ jobs:
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
         with:
-          languages: ${{ matrix.language }}
+          languages: [ 'javascript' ]
 
       - name: Autobuild
         uses: github/codeql-action/autobuild@v3
