--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,15 +11,13 @@ jobs:
 
     steps:
       - name: Deploy via SSH
-        uses: appleboy/ssh-action@v1
+        uses: appleboy/ssh-action@v1.2.0
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
+          port: 22
+          debug: true
           script: |
-            cd /opt/lopesul/apps/dashboard
-            git fetch origin
-            git reset --hard origin/main
-            docker compose down
-            docker compose build --no-cache
-            docker compose up -d
+            whoami
+            hostname
