--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,8 +16,18 @@ jobs:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
-          port: 22
-          debug: true
           script: |
-            whoami
-            hostname
+            cd /opt/lopesul/apps/dashboard
+            git fetch origin
+            git reset --hard origin/main
+            docker compose down
+            docker compose build
+            docker compose up -d
+
+            echo "Aguardando container iniciar..."
+            sleep 8
+
+            echo "Testando health dentro do container..."
+            docker exec dashboard-real curl -f http://localhost:3000/api/health || exit 1
+
+            echo "Dashboard saudável."
